# BayesSpec

./: .gitignore  .lintr  DESCRIPTION  NAMESPACE  NEWS  README.md  aclocal.m4  configure  configure.ac
R/: BayesSpec.R  RcppExports.R  _init.R  adaptspec.R  adaptspec2.R  adaptspecfit.R  adaptspecmixturefit.R  adaptspecx.R  beta_derivs.R  birth_fun.R  death_fun.R  dirichlet-mixture.R  independent-mixture.R  intracranial_eeg_data.R  lin_basis_func.R  lsbp-mixture.R  mixture-base.R  plot-adaptspecfit.R  post_beta.R  simulated_piecewise_data.R  splines.R  stick-breaking-mixture.R  utils.R  whittle.R  whittle_like.R  within_fun.R  zzz.R
data/: intracranial_eeg.rda  simulated_piecewise.rda
man/: adaptspec.Rd  adaptspec2.Rd  adaptspec_tuning.Rd  adaptspecfit.Rd  adaptspecmixturefit.Rd  adaptspecx.Rd  component_probabilities.Rd  cut_point_pmf.Rd  diagnostics.Rd  intracranial_eeg.Rd  merge_samples.Rd  ntimes.Rd  plot.adaptspecfit.Rd  segment_log_spectra_mean.Rd  simulated_piecewise.Rd  thinplate_spline_basis.Rd  time_varying_mean_mean.Rd  time_varying_mean_mean.adaptspecfit.Rd  time_varying_mean_mean.adaptspecmixturefit.Rd  time_varying_mean_samples.adaptspecfit.Rd  time_varying_spectra_mean.adaptspecfit.Rd  time_varying_spectra_samples.adaptspecfit.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  adaptspec.cpp  adaptspec.hpp  dirichlet-mixture.cpp  fft.cpp  fft.hpp  independent-mixture.cpp  logging.hpp  lsbp-mixture.cpp  mpi.hpp  prior.hpp  progress.hpp  random.cpp  rlogbeta.cpp  rloggamma.cpp  rng.cpp  rng.hpp  rtnorm.cpp  sample.cpp  sample.hpp  samples.hpp  segment_functor.hpp  splines.cpp  splines.hpp  stick-breaking-mixture.cpp  time-varying-mean.cpp  time-varying-spectra.cpp  truncated_inverse_gamma.hpp  utils.cpp  utils.hpp  whittle-likelihood.cpp  whittle-likelihood.hpp  whittle-missing.cpp  whittle-missing.hpp  whittle_likelihood.hpp
src/adaptspec/: beta-hmc.hpp  beta-optimiser.hpp  parameters.hpp  prior.hpp  sampler.hpp  samples.hpp  segment-functor.hpp  state.hpp  statistics.hpp  tuning.hpp  utils.hpp
src/dirichlet-mixture/: sampler.hpp
src/independent-mixture/: sampler.hpp
src/lsbp-mixture/: independent-proposal.hpp  sampler-mpi.hpp  sampler-strategy.hpp  sampler.hpp
src/mixture-base/: component-state.hpp  (+3 more)
tests/: testthat.R
(+23 files in other folders)
