AC_INIT()

PKG_PROG_PKG_CONFIG

: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
  echo "could not determine R_HOME"
  exit 1
fi

CC=`${R_HOME}/bin/R CMD config CC`
CPP=`${R_HOME}/bin/R CMD config CPP`
CFLAGS=`${R_HOME}/bin/R CMD config CFLAGS`
CXX=`${R_HOME}/bin/R CMD config CXX`
CXXFLAGS=`${R_HOME}/bin/R CMD config CXXFLAGS`

AC_PROG_CC
AC_PROG_CPP

PKG_CHECK_MODULES(FFTW3, fftw3, [
    PKG_CXXFLAGS="-DBAYESSPEC_FFTW ${FFTW3_CFLAGS} ${PKG_CXXFLAGS}"
    LIBS="-lfftw3 ${FFTW3_LIBS} ${LIBS}"
])

PKG_CXXFLAGS="-DEIGEN_DONT_PARALLELIZE ${PKG_CXXFLAGS}"

AC_SUBST(LIBS)
AC_SUBST(PKG_CXXFLAGS)

AC_CONFIG_FILES([src/Makevars])
AC_OUTPUT
